# humanmemory

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
data/synthetic/: dataset_100.json  generator.py  llm_generator.py  sentence_pool.json
docs/: PROJECT.md
humanmemory/: __init__.py  llm.py  system.py
humanmemory/api/: main.py
scripts/: affective_impact_test.py  affective_impact_test_v2.py  log_week2_results.py  run_baseline.py  run_session_end.py
src/api/: main.py
src/evaluation/: __init__.py  affective_eval.py  harness.py
src/memory/: models.py
src/memory/affective/: affective_store.py  emotion_classifier.py  topic_tagger.py
src/memory/episodic/: semantic_store.py  store.py
src/memory/semantic/: consolidation.py  run_consolidation.py  semantic_store.py
src/memory/working/: context_assembler.py
src/retrieval/: query_classifier.py  reranker.py
tests/: test_sdk.py
tests/integration/: test_context_assembler_e2e.py
tests/unit/: test_context_assembler.py
