[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "humanmemory"
version = "0.1.0"
description = "5-layer biologically-inspired memory service for LLM applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "sqlalchemy>=2.0.0",
    "groq>=0.4.0",
    "numpy>=1.26.0",
    "keybert>=0.8.0",
    "nltk>=3.8.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
dev = [
    "pytest>=8.2.0",
    "wandb>=0.17.0",
]

[tool.setuptools.packages.find]
include = ["humanmemory*"]
